@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-14
+2015-12-15 Mikhail S. Dubrovin
+- AreaDetector.py add returning geometry object method, add ex_cspad_quads_data.py (PSAS-139)
+
 Tag: V00-03-13
 2015-12-14 Mikhail S. Dubrovin
 - app/det_ndarr_average - evaluate and save ndarray for max value, 
